# fastapi-asynpg

./: .env  docker-compose.yml  package-lock.json  start.sh  stop.sh
backend/: README.md  alembic.ini  alembic_dev.ini  alembic_local.ini  alembic_prod.ini  pyproject.toml
backend/alembic_dev/: env.py
backend/alembic_local/: env.py
backend/alembic_local/versions/: 2024_05_03_1212-7614142b54cf_init.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  seeder.py  student_admission.py
backend/app/core/: config.py  db.py
backend/app/crud/: user.py
backend/app/models/: __init__.py  admission.py  base.py  citizenship.py  course.py  emergency_contact.py  institutional.py  student.py  survey.py  user.py  work_experience.py
backend/app/service/: user_service.py
backend/app/utils/: auth_utils.py  base_utils.py  mail_utils.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: helpers.ts  main.tsx
frontend/src/api/: auth.ts
frontend/src/components/: InitializeUser.ts
frontend/src/pages/: StudentAdmission.tsx
frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  VerifyCode.tsx
frontend/src/store/: index.js
frontend/src/store/slices/: course.slice.js  user.slice.js
scripts/: build.sh  deploy.sh
